New Transporter endpoints have been added for v2. New endpoints for external sales and we now have a sample of the images that are used for items. In general, there are several new fields available for various tables.
